<resources>
    <string name="app_name">Real Estate Manager</string>

    <!-- ACTIVITY MAIN LAYOUT -->
    <string name="it_s_a_fab">it is a FAB</string>
    <string name="tab_item_properties">Properties</string>
    <string name="tab_item_map">Map</string>

    <!-- ACTIVITY CREATE PROPERTY LAYOUT -->
    <string name="enter_description">Enter property description here:</string>
    <string name="enter_property_address">Address</string>
    <string name="create_room_title">Rooms</string>
    <string name="create_bathroom_title">Bathrooms</string>
    <string name="create_bedroom_title">Bedrooms</string>
    <string name="chose_type">Property type</string>
    <string name="interests">Interests</string>
    <string name="add_from_storage">Add pic from storage</string>
    <string name="add_from_camera">Take a pic</string>
    <string name="add_interest">Add interest</string>
    <string name="add_price_helper">Enter property price</string>
    <string name="enter_property_city">City</string>
    <string name="enter_property_county">County</string>
    <string name="enter_property_country">Country</string>
    <string name="enter_property_apartment_number">Apt n.</string>
    <string name="price">Price</string>
    <string name="enter_property_postal_code">Zip Code</string>
    <string name="save_button">SAVE</string>

    <!-- ITEM PROPERTY LAYOUT -->
    <string name="property_type">Property type</string>
    <string name="property_county">Property county</string>
    <string name="property_price">$17,870,000</string>
    <string name="property_vendor">Vendor</string>
    <string name="property_sale_status">On sale</string>

    <!-- PROPERTY DETAILS LAYOUT-->
    <string name="photo_title">Photos</string>
    <string name="description_title">Description</string>
    <string name="description_text">One-of-one. A trophy unlike any other in the world. Never before on the market. All furniture and art will be included in the sale.</string>
    <string name="details_surface_title">Surface</string>
    <string name="details_surface_value">720m²</string>
    <string name="details_surface_description">This is surface icon</string>
    <string name="details_room_title">Rooms:</string>
    <string name="details_room_value">5</string>
    <string name="details_room_description">This is room icon</string>
    <string name="details_bathroom_title">Bathrooms:</string>
    <string name="details_bathroom_value">2</string>
    <string name="details_bathroom_description">This is bathroom icon</string>
    <string name="details_bedroom_title">Bedrooms:</string>
    <string name="details_bedroom_value">3</string>
    <string name="details_bedroom_description">This is bedroom icon</string>
    <string name="details_interests_title">Point of interests:</string>
    <string name="creation_date_text">Creation date:</string>
    <string name="sold_date_text">Sold status:</string>

    <string name="details_interests_description">School, Church, Police station</string>
    <string name="details_start_sale">On sale date: 12/12/2021</string>
    <string name="details_sold_date">Sold on: 12/12/2021</string>
    <string name="details_location_title">Location:</string>
    <string name="details_location_description">This is description icon</string>
    <string name="details_street">10 avenue de la corniche</string>
    <string name="details_apartment">apt 6B</string>
    <string name="details_city">Melun</string>
    <string name="details_county">Bronx</string>
    <string name="details_zip_code">10021</string>
    <string name="details_country">Uganda</string>

    <string name="map">map</string>
    <string name="empty_layout">empty layout</string>

    <!-- ITEM DETAILS PICTURE LAYOUT -->
    <string name="item_for_details_picture">item for details picture</string>

    <!-- TOOLBAR MAIN ACTIVITY LAYOUT -->
    <string name="map_item">Map</string>
    <string name="edit_item">Edit property</string>
    <string name="converter_item">Converter</string>
    <string name="search_item">Search property</string>
    <string name="reset_search_item">Reset Search</string>
    <string name="logout_item">Logout</string>

    <!-- SEARCH PROPERTY LAYOUT -->
    <string name="price_range">Choose a price range:</string>
    <string name="surface_range">Choose a surface range:</string>
    <string name="room_range">Choose a room range:</string>
    <string name="photo_slider">Choose number of photo:</string>
    <string name="choose_county">Choose county</string>
    <string name="choose_property_type">Choose a property type:</string>
    <string name="search">Search !</string>

    <!-- TOOLBAR DETAILS ACTIVITY LAYOUT -->
    <string name="details_edit_item">Edit</string>

    <!-- TYPE DROPDOWN LAYOUT -->
    <string name="dropdown_item_text">Sample text</string>

    <!-- PROPERTY TYPE DROPDOWN STRINGS -->
    <string name="Flat">Flat</string>
    <string name="House">House</string>
    <string name="Duplex">Duplex</string>
    <string name="Penthouse">Penthouse</string>
    <string name="Condo">Condo</string>
    <string name="Apartment">Apartment</string>

    <!-- TOKEN GOOGLE SIGNING -->
    <string name="web_client_id">282238006271-jeeo49h76ialagpsoccpselgqc9q29ps.apps.googleusercontent.com</string>

    <string name="logging_in">Choose your account</string>

    <string name="popup_title_permission_files_access">Access</string>

    <!-- EDIT PROPERTY ACTIVITY -->
    <string name="edit_property">Edit property</string>
    <string name="yes">Yes</string>
    <string name="not_yes">Not yet</string>
    <string name="confirm_sale">Confirm sale?</string>

    <!-- CREATE PROPERTY ACTIVITY -->
    <string name="fields_error">At least 1 photo, address, city and zipcode</string>
    <string name="edit_done">Property successfully edited</string>
    <string name="interest_input_problem">Interest example: Atm, Bank, School</string>
    <string name="creating_property_successful">Property created successfully</string>
    <string name="url_map_static">https://maps.googleapis.com/maps/api/staticmap?center=</string>
    <string name="coma">,</string>
    <string name="zoom_size">&amp;zoom=18&amp;size=400x400&amp;</string>
    <string name="on_sale">On Sale !</string>
    <string name="marker">markers=color:blue|label:P|</string>
    <string name="key">&amp;key=</string>
    <string name="date_pattern">yyyyMMdd_HHmmss</string>
    <string name="authority">com.kardabel.realestatemanager.fileprovider</string>
    <string name="confirm_Photo_Message">confirmPhotoMessage</string>
    <string name="confirm_sold">Validate</string>

    <!-- MAIN ACTIVITY -->
    <string name="no_property_selected">Select a property please</string>
    <string name="the_best_photo_you_want">The best photo you want</string>

    <!-- SEARCH ACTIVITY -->
    <string name="search_complete">Search complete</string>
    <string name="select_parameter">Select at least one parameter or back pressed</string>

    <!-- MAIN ACTIVITY -->
    <string name="sale">This property is already sold !</string>
    <string name="title_alert">WARING!</string>
    <string name="login_out">Login out</string>
    <string name="rational">if you want to take full advantage of GO4LUNCH, please closed your app, select appInfo and go to permissions, then allow GO4LUNCH to access to your location. Reload GO4LUNCH, enjoy your lunch, thank you !</string>

    <!-- DETAILS FRAGMENT VIEWMODEL -->
    <string name="ongoing_sale">Ongoing sale !</string>
    <string name="meter">m²</string>

    <!-- PROPERTY VIEWMODEL -->
    <string name="price_nc">Price N/C</string>
    <string name="dollar">$</string>
    <string name="euro">€</string>

    <!-- AUTH LAYOUT -->
    <string name="logo">logo</string>
    <string name="connection">Connection</string>

</resources>
