<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/map_item"
        android:id="@+id/map_item"
        android:icon="@drawable/map_icon"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:title="@string/converter_item"
        android:id="@+id/converter_item"
        android:icon="@drawable/dollar_converter"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:title="@string/edit_item"
        android:id="@+id/edit_item"
        android:icon="@drawable/edit"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:title="@string/search_item"
        android:id="@+id/search_item"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:title="@string/logout_item"
        android:id="@+id/logout_item"
        android:icon="@drawable/logout"
        app:showAsAction="ifRoom">

    </item>
</menu>